Fixes to helm service type - Switched helm library version - Added helm service in example project

--- a/internal/ruckstack/builder/resources/new-project/example/ruckstack.conf
+++ b/internal/ruckstack/builder/resources/new-project/example/ruckstack.conf
@@ -15,3 +15,10 @@ type: dockerfile
 base_dir: cart
 port: 8080
 base_url: /cart
+
+
+[service-mariadb]
+type: helm
+chart: stable/mariadb
+version: 7.3.9
+port: 3306
