--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: go
 go: "1.13"
 
+go_import_path: github.com/ruckstack/ruckstack
+
+
 script: ./BUILD.sh
 
 #TODO: No uploading of artifacts so far
