Setting up buildserver
Fixes ruckstack/ruckstack #21

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ go: "1.13"
 
 go_import_path: github.com/ruckstack/ruckstack
 
-
-script: ./BUILD.sh
+#auto-runs Makefile
 
 #TODO: No uploading of artifacts so far
