--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,7 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: ruckstack-builder.zip
-        path: ~/work/ruckstack/ruckstack/out/*.zip
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ruckstack-builder.tgz
-        path: ~/work/ruckstack/ruckstack/out/*.tgz
+        name: ruckstack-builders
+        path: |
+          ~/work/ruckstack/ruckstack/out/*.zip
+          ~/work/ruckstack/ruckstack/out/*.tgz
