--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,30 +12,21 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.13
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.13
-      id: go
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - run: du -d 4
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+      - name: Build
+        run: BUILD.sh
 
-    - name: Build
-      working-directory: ~/work/ruckstack/ruckstack/
-      run: ~/work/ruckstack/ruckstack/BUILD.sh
-      
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ruckstack-builders
-        path: |
-          ~/work/ruckstack/ruckstack/out/artifacts
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ruckstack-builders
+          path: |
+            ~/work/ruckstack/ruckstack/out/artifacts
