--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,7 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v2
         with:
+          file: out/image/Dockerfile
           context: out/image
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           tag_with_ref: true
