--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,4 +65,4 @@ jobs:
           file: out/image/Dockerfile
           context: out/image
           push: true
-          tags: ghcr.io/ruckstack/ruckstack:${{ GITHUB_REF##*/ }}
+          tags: ghcr.io/ruckstack/ruckstack:${{ format(github.head_ref, 'refs/heads/', '') }}
