- Use docker SDK, not call out to separate docker - Adding tests and refactoring code for builder cli

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 TODO.txt
 **/__debug_bin
 /workspace
+
+#Compiled binaries
+builder/cli/install_root/resources/installer
+builder/cli/install_root/resources/system-control
