--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v2
         with:
-          file: out/image/Dockerfile
+          file: out/builder_image/Dockerfile
           context: out/builder_image
           push: true
           tags: ghcr.io/ruckstack/ruckstack:${{ format(github.head_ref, 'refs/heads/', '') }}
