--- a/builder/cli/install_root/resources/new_project/example/ruckstack.conf
+++ b/builder/cli/install_root/resources/new_project/example/ruckstack.conf
@@ -5,14 +5,14 @@ version: 1.0.5
 
 [service-homepage]
 type: dockerfile
-base_dir: homepage
+dockerfile: homepage/Dockerfile
 port: 8080
 base_url: /
 
 
 [service-cart]
 type: dockerfile
-base_dir: cart
+dockerfile: cart/Dockerfile
 port: 8080
 base_url: /cart
 
