--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Test
         run: bash BUILD.sh test
 
+      - name: Test Again (Cached Files)
+        run: bash BUILD.sh test
+
       - name: Save artifacts
         uses: actions/upload-artifact@v2
         with:
