- Fixing cache directory - Fixing tests - Fixing default --out and --project dirs not being handled

--- a/builder/cli/install_root/Dockerfile
+++ b/builder/cli/install_root/Dockerfile
@@ -5,12 +5,16 @@ RUN addgroup -g 1000 -S ruckstack && adduser -S ruckstack -G ruckstack -h /rucks
 RUN mkdir -p /data/out && \
     mkdir -p /data/project && \
     mkdir -p /data/cache && \
-    chown -R ruckstack:ruckstack /data/out
+    mkdir -p /data/tmp && \
+    chown -R ruckstack:ruckstack /data/out && \
+    chown -R ruckstack:ruckstack /data/project && \
+    chown -R ruckstack:ruckstack /data/cache && \
+    chown -R ruckstack:ruckstack /data/tmp
 
 USER ruckstack
 
 COPY . /ruckstack
 
-VOLUME ["/data/out", "/data/project", "/data/cache"]
+VOLUME ["/data/out", "/data/project", "/data/cache", "/data/tmp"]
 ENTRYPOINT ["/ruckstack/bin/ruckstack"]
 CMD ["--help"]
