--- a/builder/cli/install_root/Dockerfile
+++ b/builder/cli/install_root/Dockerfile
@@ -1,15 +1,15 @@
 FROM alpine:3.12
 
-RUN addgroup -g 1000 -S ruckstack && adduser -S ruckstack -G ruckstack -h /ruckstack --uid 1000
+RUN addgroup -g 9999 -S ruckstack && adduser -S ruckstack -G ruckstack -h /ruckstack --uid 9999
 
 RUN mkdir -p /data/out && \
     mkdir -p /data/project && \
     mkdir -p /data/cache && \
     mkdir -p /data/tmp && \
-    chown -R ruckstack:ruckstack /data/out && \
-    chown -R ruckstack:ruckstack /data/project && \
-    chown -R ruckstack:ruckstack /data/cache && \
-    chown -R ruckstack:ruckstack /data/tmp
+    chmod 777 /data/out && \
+    chmod 777 /data/project && \
+    chmod 777 /data/cache && \
+    chmod 777 /data/tmp
 
 USER ruckstack
 
