--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
       - name: Configure (PR)
         if: github.event_name == 'pull_request'
-        run: echo "::save-state name=BRANCH_NAME::${{ format(github.head_ref, 'refs/heads/', '') }}"
+        run: echo 'BRANCH_NAME=${{ format(github.head_ref, 'refs/heads/', '') }}' >> $GITHUB_ENV
 
       - name: Configure (Branch)
         if: github.event_name != 'pull_request'
-        run: echo "::save-state name=BRANCH_NAME::${{ format(github.ref, 'refs/heads/', '') }}"
+        run: echo 'BRANCH_NAME=${{ format(github.ref, 'refs/heads/', '') }}' >> $GITHUB_ENV
 
       - name: Install Go
         uses: actions/setup-go@v2
@@ -53,7 +53,7 @@ jobs:
       - name: Save artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ruckstack-snapshot-${{ STATE_BRANCH_NAME }}.zip
+          name: ruckstack-snapshot-${{ env.BRANCH_NAME }}.zip
           path: |
             ~/work/ruckstack/ruckstack/out/artifacts/linux/ruckstack
             ~/work/ruckstack/ruckstack/out/artifacts/mac/ruckstack.app
@@ -67,4 +67,4 @@ jobs:
           password: ${{ secrets.PACKAGE_PAT }}
 
       - name: Docker Push
-        run: bash BUILD.sh push_docker snapshot-${{ STATE_BRANCH_NAME }}
+        run: bash BUILD.sh push_docker snapshot-${{ env.BRANCH_NAME }}
