- Cache cache in build - Upgraded k3s to 1.19.5

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
+      - name: Cache Ruckstack Cache
+        uses: actions/cache@v2
+        with:
+          path: ~/go/src/github.com/ruckstack/ruckstack/cache
+          key: ${{ runner.os }}-ruckstack-cache
+
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
