Allow helm repos to be defined in ruckstack.yaml
Fixes #80

--- a/builder/cli/install_root/resources/init/wordpress/ruckstack.yaml
+++ b/builder/cli/install_root/resources/init/wordpress/ruckstack.yaml
@@ -2,6 +2,10 @@ id: wordpress
 name: Wordpress
 version: 1.0.0
 
+helmRepos:
+  - name: bitnami
+    url: https://charts.bitnami.com/bitnami
+
 helmServices:
   - id: postgresql
     chart: bitnami/wordpress
