--- a/builder/cli/install_root/resources/init/example/ruckstack.yaml
+++ b/builder/cli/install_root/resources/init/example/ruckstack.yaml
@@ -7,6 +7,11 @@ proxy:
   - serviceName: postgresql
     port: 5432
 
+helmRepos:
+  - name: bitnami
+    url: https://charts.bitnami.com/bitnami
+
+
 dockerfileServices:
   - id: backend
     dockerfile: backend/Dockerfile
