Add optional usage analytics
Fixes #83

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,5 @@ builder/cli/install_root/resources/installer
 builder/cli/install_root/resources/system-control
 builder/cli/install_root/resources/install_dir/lib
 
-#test license
-license.txt
+#test settings
+settings.yaml
