--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.16
+          go-version: ^1.13
 
       - name: Cache Go Modules
         uses: actions/cache@v2
@@ -72,5 +72,5 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PACKAGE_PAT }}
 
-      - name: Docker Push
-        run: bash BUILD.sh push_docker snapshot-${{ env.BRANCH_NAME }}
+      - name: Docker Build & Push
+        run: bash BUILD.sh build_and_push_docker snapshot-${{ env.BRANCH_NAME }}
