--- a/ops-dashboard/package.json
+++ b/ops-dashboard/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json --deploy-url /ops/",
+    "build": "ng build --prod --output-path=../server/system_control/internal/server/webserver/ops",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
