--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.
+          go-version: ^1.16
 
       - name: Install Node.js
         uses: actions/setup-node@v1
