--- a/builder/internal/bundled/install_dir/data/server/manifests/system.yaml
+++ b/builder/internal/bundled/install_dir/data/server/manifests/system.yaml
@@ -1,9 +1,8 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-settings
-  namespace: ops
-
+  name: dev-config
+  namespace: kube-system
+data:
+  enabled: "false"
 ---
